--- a/.github/workflows/dispatch_module_update.yml
+++ b/.github/workflows/dispatch_module_update.yml
@@ -6,7 +6,7 @@ jobs:
   dispatch:
     strategy:
       matrix:
-        repo: ['Seagate/cortx']
+        repo: ['Seagate/Management-Controller']
     runs-on: ubuntu-latest
     steps:
       - name: Repository Dispatch
